@@ -1,7 +1,7 @@
-DIST epson-inkjet-printer-escpr2-1.1.55-1lsb3.2.i486.rpm 3593988 BLAKE2B ba8f501dc6717db035ffe13ee8dfc3214e5d2c44ccba7cdb1e5b740e171a92a07e55c368af61553435006ca89890a4aaa8a29b4e3ceb60d79de623967554e7c8 SHA512 e988ca024050656f7cf84508935a6a643db169890513f906d80c932985485603c0bf1c5a5c998e54739fe1f673d5969bc68a78df3ce53f7dd724c7ac03cf1b81
-DIST epson-inkjet-printer-escpr2-1.1.55-1lsb3.2.x86_64.rpm 3593472 BLAKE2B d99b923b126463b579a27dd6dfa0740a7cf44edc796b4e8c3b05e8521726703a0966e8cdcc7b6b260e8e78c84136e1db54998f7229109b85c90404ec85e6897a SHA512 1c187ee3934e07258293694e78b153cececdcb84973a08802d1d463b7798440f1083365790799a6b0c3f057a8af465a15937a4837f4f12dd3e9c352508121062
 DIST epson-inkjet-printer-escpr2-1.1.56-1lsb3.2.i486.rpm 3629107 BLAKE2B 9ae2e49a5d9d03b7986a182c39b24a13b1c0883ad2879a69b073018fc1979936bbe51df78dc3dc5cc72cacb4d881dded0324185edc2b80ca5549d188ac1e1d12 SHA512 15c00a73107ff2295f230d055db483c67b0f793284fc885bf78a645e71bfc4abd3630554b5d60b18e803f11b4b2ec2c1546e419253523906f34490cb446df65d
 DIST epson-inkjet-printer-escpr2-1.1.56-1lsb3.2.x86_64.rpm 3628457 BLAKE2B 24b7455d77f2142a66bb129511586289d8360d7f3a489aabd3d3d9fe0d7ce177785738c41f27318ef39508cb642a871b50f961edef72a6a37df252c923d90a36 SHA512 c5ff0b4b52dd2f13424fc26d90ec25bd73312dd03407d19fea861841e99dfa6fe212aeb86a3aa1531b4f17eb2ce2aa80019b5fdfbabcd732c4824022d81d9570
-EBUILD epson-inkjet-printer-escpr2-bin-1.1.55.ebuild 1670 BLAKE2B 508fd4021562993792cf4eb285e8b92357e5b1c0835abadd5ef8f08a95298fb8f0f09898bd109e2f98a998d5624520c2a8e0ff20fb0a739002e64546cb390327 SHA512 a0b087e14bb8552a80a7f7d31f35b7b49b58b2bd397a4a1f6e0b89542600b59c227cd1fd9fcc9fa0ea9d4b5e8f910d273dda5df91c50263e951c6589c2a81830
+DIST epson-inkjet-printer-escpr2-1.1.57-1lsb3.2.i486.rpm 3632590 BLAKE2B ff967ba7659cbd98fa2cb21988c3d25862f7f8a810eaf18b3f37eecebfeef7538dd9355fee56526216d0e56e39fdeb0c25609d24449ab801aec3b015312b9979 SHA512 2a045dd402d227620b0540e1cb98e150ab1928230bc3ebd609aad20d70fb3c94b1b3ba4893cae6030d8943a4b3b7709c7d2e08fe0ceabd6f628c1f87195bdc1e
+DIST epson-inkjet-printer-escpr2-1.1.57-1lsb3.2.x86_64.rpm 3631682 BLAKE2B e73d4198a12745c78378abab6eca65457b570fb3075224b4938c4806ca096ba406035d14cd2b7f0605b72893f55f6f51a7b9d7f9db13bdf589c7f0254d198fa2 SHA512 b011435a6120c97d45e3a6760f887acf314ebd852cb892c4ba5f8b46d9d1277f52d5119239f705e854bd94ad8856b9787855470b6d02c47dfd96c434ea0818d7
 EBUILD epson-inkjet-printer-escpr2-bin-1.1.56.ebuild 1670 BLAKE2B c92a47e469f00780f0b2419c0c013edaf52b9a2b2c2c73aa735f0f72c8b1b8f7145f3a8a2baba7f02f148efeb9c8f083987903254a85e4fc7c9216fb59044d33 SHA512 4045ef902c4ab06a62ed434049b93455f07c5c97e90c41cc1dacff747d6399b66ca3d39785389785310946e13c9f3221fb373d4bf97185f34dff0ad13615dc0a
+EBUILD epson-inkjet-printer-escpr2-bin-1.1.57.ebuild 1670 BLAKE2B 58a63b78edd597765ca97d81b3a6f9d11938a3a6f63f8caf42f95fcc75c14cd9eed1fafb26261ab5d46262b7e0e07bc8b1176e4f7f60f0d4279df313e53ad06f SHA512 361019d4c54e104d8986ba6c7c9ec31278f8ddef4b6b7fdf4dcaedde10f969461606f81c654b9cee39a0005abb487040e357574645c1680ba2764983ebfbe45b
 MISC metadata.xml 754 BLAKE2B 8c7bf6fb2c07b1340ad2a2777faeefabaa07cc7d4637029265eccaf4613695772267da3a2a729f3a05fef7228f1c54840de30fb9914a996765637d505dfa776e SHA512 e6905e32c6a4e8cbe2e5e9a609c77176ccd4669fd08c4f2cb6eb9f272c10a68dc6355703f605d8229787e9b939790f562493661eeba78c48b707b203f55e256e
