@@ -1,6 +1,6 @@
 AUX bug_x86_64.patch 2428 BLAKE2B 2a6b8f6b9cba9694a5ff1909f5454ab6c3a3e19ef7706aa3f245991c2945b1ffe2f2a792fa85d14e2dd8cd5181eca9eed1b171c891f14c84d04b88cdfb8c097f SHA512 55cafa67de12daa9730e2aca3887b049dd52dd093e9f1609ea656165a67cd30bc1fc2b043c675f778a52e9e3fddce751f1b3533e31b7e6fbbbeede1cc25726ac
-DIST epson-inkjet-printer-escpr2-1.1.55.tar.gz 4944491 BLAKE2B 6f7e29c74282591ed38440d6ccde24db42f00a2b86f68975fd9c765f9114ba76bbbf2e4859c703ec9355d0b11bce0b9a93ccf0be76e1c30a20e6e3299f50b6e1 SHA512 2a56a68ec454878b249b887667322430cc2fa43a4b4a3a94ad197a17daab970e8a4a9090f488895a58c2fa0f8d9b39fa3abd6ff5d4ff33389d0d5c822b430e64
 DIST epson-inkjet-printer-escpr2-1.1.56.tar.gz 4977194 BLAKE2B 54ca706c86350de036aae53f6ced211fdcc16443a0d5acaf7df1af16afa62b90ff5055a2bcbb598feef002b686fcb72cca3eb7819bf484fcc22dd693dac94f9a SHA512 68502f8142650ead0c7d224a00a7afc75f83c5ee323716bec9c45bb271dc756fe49afd0f38b15bbcc2a13745cb788358f7dfc5572d6e554c16798ce82d979203
-EBUILD epson-inkjet-printer-escpr2-1.1.55.ebuild 1319 BLAKE2B 85bea584a9f5f9788f2a549477ccf5a90204efd3d105c3f10fd4ec76b93c24fc62d8c5b4781d759846ec98a1ac1fc9db85fdb3e3c0fabe988a040f7d8f511580 SHA512 ee9bf19a0d2ca4db9e8f6cafb09cf8ef072484b083c2ba92376fdb1a17966bbec7fc09cf716720912ae012b5a2b1c6cb9e99e2870f3cf003bc1aa06c48f29e8e
+DIST epson-inkjet-printer-escpr2-1.1.57.tar.gz 4995287 BLAKE2B 3f76e3438a4fc05ad8bf1941bd1afcd542c705cca8271754deb18f1750aa8e5a1f4295a92caf2c68a033b3d44a6ab9eb79a312bd2e56d29b1f57e42a39e154d1 SHA512 c89f15688f7439b3817da13b79c1e8316664bfb46e339446657e6569adf415276ba41283770980b881c3983ccf6530b8428e2d96e74d9df2d43cafa884f9ba37
 EBUILD epson-inkjet-printer-escpr2-1.1.56.ebuild 1319 BLAKE2B b54dc49a695752318a6d8a72d0bd6b522d08caa71424e828cad13b64a2f7ee4c95d04fe497d9f952ad1d4650a655b76908f1fc18eb1df00c6eb01510446b50a1 SHA512 3ecf5afbc1673cd96cc7df9ba806ad8845e3d72eb041aa900b79025e06c3786ecdacebf877249021db88cc91ae2bc23d7830c5b339ccf18ce4d6989aaf6b245d
+EBUILD epson-inkjet-printer-escpr2-1.1.57.ebuild 1319 BLAKE2B 5d97a89e1a114b337f5b956328e4a8360d77437b2c2f77fe5bf0c70fbd0b8c7233298e71df8ba9a47bfbce8a3c3a26fbed9327e4bb4847c94c5e05794712cc14 SHA512 e51cef4902616ca4c78199b79cd5497bf4550d292d8ac352f3e6d96e2ebe3ba4882d2b522a641e318beeae0f90a2fc5a1bc8d699402d4d1bd2d1f69138bd4272
 MISC metadata.xml 767 BLAKE2B f926930802184524574c0cc524e8a4e519c343041491770cd1ec74c356d2657c3c566948081a816c9e4d2924b4ad5162023336de0b1fe1ed7199106ed1f5dc86 SHA512 5e1183fe70cdf9cd2dac426a594750ee9733e4cbe9caac68ed028539589653bb6c10083397d234c53dbd1875520be1b2edc4078a117891b040975acd7fa840ac
